bin_PROGRAMS = solid2fastq

solid2fastq_SOURCES = \
					  ../blib/BError.c	../blib/BError.h \
					  ../blib/RGIndex.c  ../blib/RGIndex.h \
					  ../blib/BLib.c ../blib/BLib.h \
					  ../blib/RGBinary.c ../blib/RGBinary.h \
					  ../blib/RGRanges.c ../blib/RGRanges.h \
					  solid2fastq.c

solid2fastq_LDADD = -lm -lz
